log/build_2023-08-16_05-13-36/agv_gui/stderr.log
In file included from /usr/include/aarch64-linux-gnu/qt5/QtGui/qtguiglobal.h:43,
                 from /usr/include/aarch64-linux-gnu/qt5/QtWidgets/qtwidgetsglobal.h:43,
                 from /usr/include/aarch64-linux-gnu/qt5/QtWidgets/qapplication.h:43,
                 from /usr/include/aarch64-linux-gnu/qt5/QtWidgets/QApplication:1,
                 from /home/amr_1/agv_gui/src/agv_gui/src/main_gui.cpp:1:
/usr/include/aarch64-linux-gnu/qt5/QtCore/qobject.h: In instantiation of ‘static QMetaObject::Connection QObject::connect(const typename QtPrivate::FunctionPointer<Func>::Object*, Func1, const typename QtPrivate::FunctionPointer<Func2>::Object*, Func2, Qt::ConnectionType) [with Func1 = void (MotorSub::*)(std::__cxx11::basic_string<char>); Func2 = void (MainGui::*)(double); typename QtPrivate::FunctionPointer<Func>::Object = MotorSub; typename QtPrivate::FunctionPointer<Func2>::Object = MainGui]’:
/home/amr_1/agv_gui/src/agv_gui/src/main_gui.cpp:119:86:   required from here
/usr/include/aarch64-linux-gnu/qt5/QtCore/qobject.h:241:9: error: static assertion failed: Signal and slot arguments are not compatible.
  241 |         Q_STATIC_ASSERT_X((QtPrivate::CheckCompatibleArguments<typename SignalType::Arguments, typename SlotType::Arguments>::value),
      |         ^~~~~~~~~~~~~~~~~
make[2]: *** [CMakeFiles/agv_gui.dir/build.make:89: CMakeFiles/agv_gui.dir/src/main_gui.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:79: CMakeFiles/agv_gui.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
